--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.6",
+    "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
